# audit_log/app.py
@@ -93,6 +93,9 @@ def get_ability_efficiency_stats(index):
     logger.error("Could not find ability efficiency at index %d" % index)
     return { "message": "Not found"}, 404
 
+def health_check():
+    return 200
+
 app = connexion.FlaskApp(__name__, specification_dir='')
 if "TARGET_ENV" not in os.environ or os.environ["TARGET_ENV"] != "test":
     CORS(app.app)
