# processing/app.py
@@ -174,6 +174,9 @@ def get_stats():
     logging.info("Get request completed")
     return dict(data), 200
 
+def health_check():
+    return 200
+
 app = connexion.FlaskApp(__name__, specification_dir='')
 if "TARGET_ENV" not in os.environ or os.environ["TARGET_ENV"] != "test":
     CORS(app.app)
