# receiver/openapi.yaml
@@ -46,6 +46,18 @@ paths:
           description: item created
         "400":
           description: "invalid input, object invalid"
+  /health:
+    get:
+      summary: reports health check
+      description: Returns 200 response code if the app is running
+      operationId: app.health_check
+      response:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              example:
+                message: "App is running smoothly"
 components:
   schemas:
     BulletEfficiency:
@@ -97,3 +109,4 @@ components:
         ability_cost:
           type: integer
           example: 1200
+  
