# storage/app.py
@@ -200,6 +200,9 @@ def process_messages():
             session.close()
 
         consumer.commit_offsets()
+    
+def health_check():
+    return 200
 
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("openapi.yaml", base_path="/storage", strict_validation=True, validate_responses=True)
